syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

service GreetingService {
    // unary
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};

    // server side streaming
    rpc GreetManyTimes(GreetingRequest) returns (stream GreetingResponse) {};

    // client side streaming
    rpc LongGreet(stream GreetingRequest) returns (GreetingResponse) {};
}